# moonshot

./: .gitignore  README.md  prompt.txt
client/: .env.example  package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css
client/src/form/: input.tsx
client/src/output/: output-page.tsx
server/: .env.example  pyproject.toml
server/app/: execute_cick.py  execute_fill.py  execute_search.py  extract.py  generate.py  get_text.py  image_to_text.py  main.py  page.py  run.py  x.py
server/app/actions/: click.py  extract.py  fill.py  search.py
server/app/filter/: filter_response.py
server/app/llms/: main.py
server/app/task/: update.py
server/app/utils/: html_electors.py
